navbar header y main
navbar header y main

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,12 +10,13 @@
 @import 'base/reset';
 @import 'base/typography';
 @import 'layout/navigation';
-@import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/main-section';
 @import 'layout/aside';
 @import 'layout/forms';
+@import 'layout/media';
+@import 'components/grid';
 @import 'components/buttons';
 @import 'components/inputs';
 @import 'pages/home';
