--- a/assets/scss/components/_grid.scss
+++ b/assets/scss/components/_grid.scss
@@ -1,9 +1,12 @@
-.grid{
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(min(100%,25rem),1fr));
-   
+.grid {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 25rem), 1fr));
 }
-.box{
-    background-color: aqua;
+.footer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
