--- a/assets/scss/layout/_main-section.scss
+++ b/assets/scss/layout/_main-section.scss
@@ -1,26 +1,118 @@
 .box {
-    border: solid;
-    padding: .5em .5em;
+  border: solid $gray 0.5px;
+  padding: 1em 0.5em;
   &__card {
-      border: solid;
+    border: solid $gray 0.3px;
   }
   &__img {
-      width: 35rem;
+    width: 100%;
+    height: 10rem;
+    object-fit:cover;
+    &--mod {
+      width: 100%;
       height: 13rem;
-      margin-top: 1rem;
-      margin-left: 2rem;
+      object-fit:cover;
+      
+    }
   }
   &__item {
+    display: inline-block;
+    padding: 0.2em;
+    font-size: $x-small;
+    &--space {
+      margin-right: 0.4em;
+    }
+  }
+  &__instructor {
+    font-family: $ubuntu;
+    font-weight: $f700;
+    font-size: $small;
   }
   &__subtitle {
+    font-family: $ubuntu;
+    line-height: 1.4em;
+    color: $gray;
+    font-size: $x-small;
   }
   &__text {
+    margin-left: 2em;
   }
   &__title {
-  }
-  &__ul {
+    font-family: $ubuntu;
+    font-weight: $f700;
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
   }
 }
 
-.grid {
+.animation {
+  display: flex;
+  justify-content: center;
+  &__img {
+    width: 10rem;
+    height: 10rem;
+    background-image: url(../images/web.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+.box {
+  
+  &__courses {
+    text-decoration: none;
+  }
+  &__image {
+    display: flex;
+    justify-content: center;
+  }
+  &__img2 {
+    display: flex;
+    border: 1px solid $black;
+    width: 9rem;
+    border-radius: 20rem;
+    -webkit-border-radius: 20rem;
+    -moz-border-radius: 20rem;
+    -ms-border-radius: 20rem;
+    -o-border-radius: 20rem;
+  }
+  &__item2 {
+    padding: 0.3rem;
+  }
+  &__subtitle2 {
+    font-family: $ubuntu;
+    line-height: 1.6em;
+    color: $gray;
+    font-size: $x-small;
+    margin-bottom: 0.4em;
+  }
+  
+  &__title2 {
+    font-family: $ubuntu;
+    font-weight: $f700;
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
+  }
+  &__title3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $gray;
+    font-family: $ubuntu;
+    font-weight: $f700;
+    color: $white;
+    height: 2rem;
+  }
+
+  &__ul2 {
+    display: flex;
+    justify-content: center;
+  }
+  &__ul3 {
+    font-family: $ubuntu;
+    font-size: $x-small;
+    list-style: circle;
+    margin-top: 1em;
+    margin-left: 1rem;
+    line-height: 1.6em;
+  }
 }
