--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -1,134 +1,129 @@
-.nav {
-    width: 100vw;
-    height: 3.5rem;
-    background-color: $black;
-    display: flex;
-  
-    &__logo {
-      display: flex;
-      margin-left: 2rem;
-      margin-top: 0.5rem;
-    }
-    &__img {
-      height: 2.5rem;
-      width: 2.5rem;
-    }
-  }
-    .collapse {
-      position: absolute;
-      text-align: right;
-      right: 10%;
-      label {
-        display: block;
-        padding-top: 0.6em;
-        padding-bottom: 0.5em;
-        @include relative-converter(font-size, rem, $x-large, 16);
-      }
-    }
-  
-    #menu {
-      display: none;
-    }
-    input:checked ~ .nav__container {
-      max-height: 100%;
-    }
-    .nav__container {
-      max-height: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-  
-    .nav__list {
-      list-style-type: none;
-    }
-  
-    .nav__item {
-      a {
-        display: inline-block;
-        padding: 0.5em;
-        font-family: $ubuntu;
-        @include relative-converter(font-size, rem, $small, 16);
-        font-weight: $f700;
-        font-size: $x-small;
-        text-decoration: none;
-        color: $white;
-        &:hover {
-          color: $tangerine;
-        }
-      }
-    }
 
-  
-  @media (min-width: 350px) {
-    .nav__item {
-      a {
-        text-align: right;
-      }
-    }
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  align-items: center;
+  background-color: $black;
+  position: sticky;
+  color: $white;
+  z-index: 10;
+
+  &__logo {
+    text-decoration: none;
   }
-  
-  @media (min-width: 576px) {
-    .collapsible {
-      label {
-        display: none;
-      }
-    }
-    .nav__container {
-      min-height: 100%;
-      padding: 0.5em 3em;
-      overflow: visible;
-    }
-    .nav__list {
-      display: flex;
-      justify-content: flex-end;
-    }
-    .nav__item {
-      a {
-        padding: 0.5em 1em;
-      }
-    }
+  &__img{
+    width: 2.5rem;
   }
-  
-  @media only screen and (min-width: 769px) {
-    .collapse {
-      label {
-        display: none;
-      }
-    }
-    .nav__container {
-      min-height: 100%;
-      padding: 0.5em 3em;
-      overflow: visible;
-    }
-    .nav__list {
-      display: flex;
-      justify-content: flex-end;
-    }
-    .nav__item {
-      a {
-        padding: 0.5em 1em;
-      }
-    }
+}
+
+
+
+.nav__container {
+  position: relative;
+}
+
+.nav__hamburger {
+  color: inherit;
+  min-width: 32px;
+  min-height: 32px;
+  transition: opacity 80ms linear;
+  display: none;
+  opacity: 0;
+  text-decoration: none;
+}
+
+.nav__hamburgerclose {
+  color: inherit;
+  position: absolute;
+  top: 0;
+  min-width: 32px;
+  min-height: 32px;
+  transition: opacity 150ms linear;
+  display: none;
+  opacity: 0;
+  z-index: -1; 
+  text-decoration: none;
+}
+
+.nav__menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 0.95rem;
+  font-weight: 500;
+}
+
+.nav__item {
+  margin-right: 1rem;
+
+}
+
+.nav__link {
+  color: inherit;
+  text-decoration: none;
+  width: 100%;
+  font-family: $poppins;
+  font-weight: $f400;
+}
+
+.nav__link:hover,
+.nav__link:focus-visible {
+  color: $orange;
+}
+
+@media (max-width: 520px) {
+  .nav__hamburger {
+    display: flex;
+    opacity: 1;
   }
-  
-  @media (min-width: 769px) {
-    .collapse {
-      label {
-        display: none;
-      }
-    }
-    .nav__container {
-      min-height: 100%;
-      padding: 0.5em 3em;
-      overflow: visible;
-    }
-    .nav__list {
-      display: flex;
-      justify-content: flex-end;
-    }
-    .nav__item {
-      a {
-        padding: 0.5em 1em;
-      }
-    }
+
+  .nav__menu {
+    opacity: 0;
+    position: fixed;
+    visibility: none;
+    top: -1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    color: $charcoal;
+    background: $white;
   }
+
+  .nav__list:focus .nav__menu,
+  .nav__list:focus-within .nav__menu {
+    position: absolute;
+    visibility: visible;
+    opacity: 1;
+    top: 2rem;
+    right: 1.5rem;
+  }
+
+  .nav__item {
+    margin-right: 0;
+    padding: 0.5rem 3rem;
+  }
+  .nav__link:hover,
+  .nav__link:focus {
+    opacity: 0.8;
+    color: $orange;
+  }
+
+  .nav__list:focus .nav__hamburger,
+  .nav__list:focus-within .nav__hamburger {
+    opacity: 0;
+    z-index: -1;
+  }
+
+  .nav__list:focus + .nav__hamburgerclose,
+  .nav__list:focus-within + .nav__hamburgerclose {
+    display: flex;
+    opacity: 1;
+    z-index: 1;
+  }
+}
+
