--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -2,15 +2,9 @@
     display: flex;
     justify-content: center;
     height: 20rem;
-    
-       
+    width: 100%;   
     &__img{
-        width: 33rem;
-        height: 19rem;
-        background-size: cover;
-        background-image: url(../images/desarrolloweb2021t.svg);
-        background-repeat: no-repeat;
-        
-        
+        width: 100%;
+        height: auto;    
     }
 }
