--- a/assets/scss/layout/_main-section.scss
+++ b/assets/scss/layout/_main-section.scss
@@ -6,12 +6,10 @@
   }
   &__img {
     width: 100%;
-    height: 10rem;
-    object-fit:cover;
+    object-fit:fill;
     &--mod {
       width: 100%;
-      height: 13rem;
-      object-fit:cover;
+      object-fit:fill;
       
     }
   }
@@ -49,11 +47,7 @@
   display: flex;
   justify-content: center;
   &__img {
-    width: 10rem;
-    height: 10rem;
-    background-image: url(../images/web.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
+    max-width: 78%;
   }
 }
 .box {
