--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,11 +1,7 @@
 
 
 @import 'abstracts/variables';
-@import 'abstracts/functions';
 @import 'abstracts/mixins';
-@import 'abstracts/placeholders';
-@import 'vendors/bootstrap';
-@import 'vendors/jquery-ui';
 @import 'base/base';
 @import 'base/reset';
 @import 'base/typography';
@@ -13,13 +9,6 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/main-section';
-@import 'layout/aside';
-@import 'layout/forms';
-@import 'layout/media';
 @import 'components/grid';
-@import 'components/buttons';
-@import 'components/inputs';
-@import 'pages/home';
-@import 'themes/theme';
-@import 'themes/admin';
-	
+@import 'components/keyframes';
+
