--- a/assets/scss/layout/_main-section.scss
+++ b/assets/scss/layout/_main-section.scss
@@ -45,9 +45,16 @@
 
 .animation {
   display: flex;
-  justify-content: center;
+  
   &__img {
-    max-width: 78%;
+    max-width: 70%;
+    
+  }
+  &__container{
+    justify-content: center;
+    
+    
+    
   }
 }
 .box {
