--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -292,12 +292,11 @@ table {
 
 .animation {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .animation__img {
   max-width: 70%;
-}
-.animation__container {
-  justify-content: center;
 }
 
 .box__courses {
